--- a/optics/Assembly-CSharp.csproj
+++ b/optics/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Alignment.cs" />
     <Compile Include="Assets\FixedRotation.cs" />
     <Compile Include="Assets\LameSemi.cs" />
+    <Compile Include="Assets\RectWall.cs" />
     <Compile Include="Assets\Scripts\Debug\CreatePoligon.cs" />
     <Compile Include="Assets\Scripts\Debug\polygon.cs" />
     <Compile Include="Assets\Scripts\DragAndDrop.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Assets\Scripts\OpticalComponents\Mirror.cs" />
     <Compile Include="Assets\Scripts\OpticalComponents\OpticalComponent.cs" />
     <Compile Include="Assets\Scripts\OpticalComponents\Target.cs" />
+    <Compile Include="Assets\Scripts\OpticalComponents\Wall.cs" />
     <None Include="Assets\Resources\Materials\NewSurfaceShader.shader" />
     <None Include="Assets\Resources\Materials\RayDiv.shader" />
     <Reference Include="UnityEditor.StandardEvents">
