--- a/optics/Assembly-CSharp.csproj
+++ b/optics/Assembly-CSharp.csproj
@@ -62,6 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Alignment.cs" />
+    <Compile Include="Assets\DontDestroyOnLoad.cs" />
+    <Compile Include="Assets\LevelButton.cs" />
+    <Compile Include="Assets\LevelSelector.cs" />
+    <Compile Include="Assets\LeveManager.cs" />
     <Compile Include="Assets\Scripts\Debug\CreatePoligon.cs" />
     <Compile Include="Assets\Scripts\Debug\polygon.cs" />
     <Compile Include="Assets\Scripts\DragAndDrop.cs" />
