--- a/optics/Assembly-CSharp.csproj
+++ b/optics/Assembly-CSharp.csproj
@@ -37,29 +37,30 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Alignment.cs" />
-     <Compile Include="Assets\DontDestroyOnLoad.cs" />
-     <Compile Include="Assets\DragHandle.cs" />
-     <Compile Include="Assets\HandleManager.cs" />
-     <Compile Include="Assets\LeveManager.cs" />
-     <Compile Include="Assets\LevelButton.cs" />
-     <Compile Include="Assets\LevelSelector.cs" />
-     <Compile Include="Assets\PanZoom.cs" />
+     <Compile Include="Assets\MyRaycaster.cs" />
      <Compile Include="Assets\Scripts\Debug\CreatePoligon.cs" />
      <Compile Include="Assets\Scripts\Debug\polygon.cs" />
-     <Compile Include="Assets\Scripts\DragAndDrop.cs" />
+     <Compile Include="Assets\Scripts\Engine\DontDestroyOnLoad.cs" />
+     <Compile Include="Assets\Scripts\Engine\DragAndDrop.cs" />
+     <Compile Include="Assets\Scripts\Engine\GameEngine.cs" />
+     <Compile Include="Assets\Scripts\Engine\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\Engine\LevelSelector.cs" />
+     <Compile Include="Assets\Scripts\Engine\LightRay.cs" />
+     <Compile Include="Assets\Scripts\Engine\StarFollowRay.cs" />
      <Compile Include="Assets\Scripts\FixedRotation.cs" />
-     <Compile Include="Assets\Scripts\GameEngine.cs" />
-     <Compile Include="Assets\Scripts\LevelManager.cs" />
-     <Compile Include="Assets\Scripts\LightRay.cs" />
-     <Compile Include="Assets\Scripts\LightSource.cs" />
+     <Compile Include="Assets\Scripts\GUI\CreateComponent.cs" />
+     <Compile Include="Assets\Scripts\GUI\DragHandle.cs" />
+     <Compile Include="Assets\Scripts\GUI\HandleManager.cs" />
+     <Compile Include="Assets\Scripts\GUI\LevelButton.cs" />
+     <Compile Include="Assets\Scripts\GUI\PanZoom.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\LameSemi.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Lens.cs" />
+     <Compile Include="Assets\Scripts\OpticalComponents\LightSource.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Mirror.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\OpticalComponent.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\RectWall.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Target.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Wall.cs" />
-     <Compile Include="Assets\StarFollowRay.cs" />
      <None Include="Assets\Resources\Materials\RayDiv.shader" />
      <None Include="Assets\Resources\Materials\NewSurfaceShader.shader" />
     <Reference Include="UnityEngine">
