--- a/optics/Assembly-CSharp.csproj
+++ b/optics/Assembly-CSharp.csproj
@@ -42,8 +42,8 @@
      <Compile Include="Assets\PointerManager.cs" />
      <Compile Include="Assets\Scripts\Debug\CreatePoligon.cs" />
      <Compile Include="Assets\Scripts\Debug\polygon.cs" />
+     <Compile Include="Assets\Scripts\Engine\ChessPiece.cs" />
      <Compile Include="Assets\Scripts\Engine\DontDestroyOnLoad.cs" />
-     <Compile Include="Assets\Scripts\Engine\DragAndDrop.cs" />
      <Compile Include="Assets\Scripts\Engine\GameEngine.cs" />
      <Compile Include="Assets\Scripts\Engine\LevelManager.cs" />
      <Compile Include="Assets\Scripts\Engine\LevelSelector.cs" />
