--- a/optics/Packages/manifest.json
+++ b/optics/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "3.0.14",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.5.2",
     "com.unity.analytics": "3.3.5",
