--- a/optics/Assembly-CSharp.csproj
+++ b/optics/Assembly-CSharp.csproj
@@ -36,9 +36,6 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\GrasManager.cs" />
-     <Compile Include="Assets\GroundManager.cs" />
-     <Compile Include="Assets\Scripts\Alignment.cs" />
      <Compile Include="Assets\Scripts\Debug\CreatePoligon.cs" />
      <Compile Include="Assets\Scripts\Debug\polygon.cs" />
      <Compile Include="Assets\Scripts\Designer\Designer.cs" />
@@ -52,7 +49,6 @@
      <Compile Include="Assets\Scripts\Engine\MyMathf.cs" />
      <Compile Include="Assets\Scripts\Engine\StarFollowRay.cs" />
      <Compile Include="Assets\Scripts\ExecInEdit.cs" />
-     <Compile Include="Assets\Scripts\FixedRotation.cs" />
      <Compile Include="Assets\Scripts\GUI\BoolParameterModifier.cs" />
      <Compile Include="Assets\Scripts\GUI\CreateComponent.cs" />
      <Compile Include="Assets\Scripts\GUI\DimensionHandle.cs" />
@@ -64,22 +60,27 @@
      <Compile Include="Assets\Scripts\GUI\OptionManager.cs" />
      <Compile Include="Assets\Scripts\GUI\PanZoom.cs" />
      <Compile Include="Assets\Scripts\GUI\PointerManager.cs" />
-     <Compile Include="Assets\Scripts\LevelDescriptor.cs" />
-     <Compile Include="Assets\Scripts\MyRaycaster.cs" />
+     <Compile Include="Assets\Scripts\LevelManagement\GroundManager.cs" />
+     <Compile Include="Assets\Scripts\LevelManagement\LevelDescriptor.cs" />
+     <Compile Include="Assets\Scripts\LevelManagement\LevelLoader.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\GenericComponent.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\LameSemi.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Lens.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\LightSource.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Mirror.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\OpticalComponent.cs" />
+     <Compile Include="Assets\Scripts\OpticalComponents\OptionRailManager.cs" />
+     <Compile Include="Assets\Scripts\OpticalComponents\OptionWall.cs" />
+     <Compile Include="Assets\Scripts\OpticalComponents\RailManager.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\RectWall.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Target.cs" />
      <Compile Include="Assets\Scripts\OpticalComponents\Wall.cs" />
-     <Compile Include="Assets\Scripts\OptionRailManager.cs" />
-     <Compile Include="Assets\Scripts\OptionWall.cs" />
-     <Compile Include="Assets\Scripts\RailManager.cs" />
-     <Compile Include="Assets\Scripts\VerboseRaycaster.cs" />
-     <Compile Include="Assets\Scripts\ZoneManager.cs" />
+     <Compile Include="Assets\Scripts\OpticalComponents\ZoneManager.cs" />
+     <Compile Include="Assets\Scripts\Unused\Alignment.cs" />
+     <Compile Include="Assets\Scripts\Unused\FixedRotation.cs" />
+     <Compile Include="Assets\Scripts\Unused\GrasManager.cs" />
+     <Compile Include="Assets\Scripts\Unused\MyRaycaster.cs" />
+     <Compile Include="Assets\Scripts\Unused\VerboseRaycaster.cs" />
      <None Include="Assets\Resources\Materials\RayDiv.shader" />
      <None Include="Assets\Resources\Materials\NewSurfaceShader.shader" />
     <Reference Include="UnityEngine">
